# database_py

./: CMakeLists.txt  README.md  config.db  config.py  configDataBase.py  data.py  main.cpp  omiddatabase.db  read data.py  setData.db  source.cpp  timer.py  userInterface.py
sourc/: main.cpp  sourc.cbp
